--- a/app/views/admin/organizations/edit.html.erb
+++ b/app/views/admin/organizations/edit.html.erb
@@ -3,6 +3,6 @@
 <% elsif show_partial?('agents') %>
   <h1><%= t'backend.edit_agents' %></h1>
 <% else %>
-  <h1>Editar organización</h1>
+  <h1>Editar Lobby</h1>
 <% end %>
 <%= render :partial => 'form' %>
