--- a/app/views/admin/agents/index.html.erb
+++ b/app/views/admin/agents/index.html.erb
@@ -14,7 +14,7 @@
   <table class="small-12">
     <thead>
       <tr>
-        <th><%= t('backend.lobby')%></th>
+        <th>Agentes</th>
         <th class="right"><%= t('backend.actions')%></th>
       </tr>
     </thead>
