--- a/app/views/organizations/_common_instructions_text.es.html.erb
+++ b/app/views/organizations/_common_instructions_text.es.html.erb
@@ -4,7 +4,7 @@
 <br/>
 <h3>Instrucciones generales</h3>
 <span>
-El impreso puede ser cumplimentado o a mano (con mayúsculas tipo imprenta), o a través de la Sede electrónica del Ayuntamiento de Madrid (<%= link_to 'https://sede.madrid.es', 'https://sede.madrid.es' , name: nil %>).
+El impreso puede ser cumplimentado o a mano (con mayúsculas tipo imprenta), o a través de la Sede electrónica del Ayuntamiento de Madrid (<%= link_to 'https://sede.madrid.es', 'https://sede.madrid.es/sites/v/index.jsp?vgnextoid=5763386a64370610VgnVCM2000001f4a900aRCRD&vgnextchannel=f47ea38813180210VgnVCM100000c90da8c0RCRD' , name: nil %>).
 </span>
 <ul>
   <li>
