--- a/app/views/admin/organizations/_form.html.erb
+++ b/app/views/admin/organizations/_form.html.erb
@@ -1,16 +1,16 @@
 <%= form_for [:admin, @organization], html: { class: 'organization-form' } do |f| %>
 
-  <%= render 'organization_errors', f: f %>
-  <%= render 'reference', f: f %>
-  <%= render 'data', f: f %>
-  <%= render 'legal_representant', f: f %>
-  <%= render 'user', f: f %>
-  <%= render 'lobby_data', f: f %>
-  <%= render 'represented_entities', f: f %>
-  <%= render 'interests', f: f %>
-  <%= render 'agents', organization: @organization %>
-  <%= render 'terms', f: f %>
-  <%= render 'invalidate', f: f %>
+  <%= render 'organization_errors', f: f if current_user.admin? %>
+  <%= render 'reference', f: f if current_user.admin? %>
+  <%= render 'data', f: f if current_user.admin? %>
+  <%= render 'legal_representant', f: f if current_user.admin? %>
+  <%= render 'user', f: f if current_user.admin? %>
+  <%= render 'lobby_data', f: f if current_user.admin? %>
+  <%= render 'represented_entities', f: f if current_user.admin? %>
+  <%= render 'interests', f: f if current_user.admin? || show_partial?('interests') %>
+  <%= render 'agents', organization: @organization if current_user.admin? %>
+  <%= render 'terms', f: f if current_user.admin? %>
+  <%= render 'invalidate', f: f if current_user.admin? %>
 
   <div class="small-4 medium-3 large-2 column">
     <%= submit_tag t('backend.save'), class: "button radius success right" %>
