--- a/app/views/layouts/_admin_sidebar.html.erb
+++ b/app/views/layouts/_admin_sidebar.html.erb
@@ -56,7 +56,7 @@
     <% end %>
     <% if current_user.user? %>
       <li class="<%= active_menu('events', nil, 'tray') %>">
-        <a href="<%= @events_path %>">
+        <a href="<%= events_path(event_fixed_filters['tray']) %>">
           <i class="fi-calendar size-18">
             <%= t("backend.event_tray") %>
           </i>
