--- a/app/views/organizations/_common_instructions_text.es.html.erb
+++ b/app/views/organizations/_common_instructions_text.es.html.erb
@@ -21,4 +21,4 @@ El impreso puede ser cumplimentado o a mano (con mayúsculas tipo imprenta), o a
   </li>
 </ul>
 <br/>
- <%= link_to 'Ir a sede electronica', '#' ,class: 'button expanded button', name: nil %>
+ <%= link_to 'Ir a sede electronica', "https://sede.madrid.es/sites/v/index.jsp?vgnextoid=5763386a64370610VgnVCM2000001f4a900aRCRD&vgnextchannel=f47ea38813180210VgnVCM100000c90da8c0RCRD" ,class: 'button expanded button', name: nil %>
