Increase heigth on status selector.

--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -12,6 +12,7 @@
  *
  *= require all
  *= require admin/agents
+ *= require admin/events
  *= require fixes
  *= require foundation-icons
  *= require 'jquery-ui/sortable'
