--- a/app/assets/stylesheets/all.css.scss
+++ b/app/assets/stylesheets/all.css.scss
@@ -5,8 +5,8 @@
  * 2. Prevent iOS and IE text size adjust after device orientation change,
  *    without disabling user zoom.
  */
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700,300,600,800);
-@import url(https://fonts.googleapis.com/css?family=Lato:400,300,700,900);
+@import url("//fonts.googleapis.com/css?family=Open+Sans:400,700,300,600,800");
+@import url("//fonts.googleapis.com/css?family=Lato:400,300,700,900");
 html {
   font-family: sans-serif;
   /* 1 */
