Add new text on attachments agentes.

--- a/app/views/admin/agents/_form.html.erb
+++ b/app/views/admin/agents/_form.html.erb
@@ -90,6 +90,7 @@
                                   } %>
     </div>
     <br>
+    <p><%= t('backend.agents.attachment.text1') %></p>
   </div>
 
   <div class="row">
