--- a/app/assets/javascripts/events.js.erb
+++ b/app/assets/javascripts/events.js.erb
@@ -156,6 +156,11 @@ $(function(){
   $("#event_lobby_activity_true").click(function(){
     $(".lobby-organization-autocomplete").show();
     $('.lobby-scheduled').show();
+    $('.lobby-contact-info').show();
+  });
+
+  $("#event_lobby_activity_false").click(function(){
+    $('.lobby-contact-info').hide();
   });
 
   if ($("#event_lobby_activity_true").is(":checked")) {
@@ -173,6 +178,7 @@ $(function(){
     $('.represented-entities-block').hide();
     $('.agents-block').hide();
     $('.lobby-scheduled').hide();
+    $('.lobby-contact-info').hide();
     fill_autocomplete_organization_name();
     fill_represented_entities_select_options();
     fill_agents_select_options();
