--- a/app/views/organizations/edit.html.erb
+++ b/app/views/organizations/edit.html.erb
@@ -1,2 +1,2 @@
-<h1><%= t('organizations.edit.title')%></h1>
+<h1><%#= t('organizations.edit.title')%></h1>
 <%= render partial: 'common_instructions_text' %>
