--- a/app/views/organizations/new.html.erb
+++ b/app/views/organizations/new.html.erb
@@ -1,2 +1,2 @@
-<h1><%= t('organizations.new.title')%></h1>
+<h1><%#= t('organizations.new.title')%></h1>
 <%= render partial: 'common_instructions_text' %>
