moved mailers from model callbacks to controllers

--- a/app/views/events/_reason_text_area.html.erb
+++ b/app/views/events/_reason_text_area.html.erb
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="small-12 columns">
         <%= f.label label, msg %>
-        <%= f.text_area label, class: 'tinymce' %>
+        <%= f.text_area label, class: 'tinymce', id: "#{id}-mce" %>
       </div>
     </div>
   </div>
