Add static page statistics

--- a/app/views/registration_lobbies/index.html.erb
+++ b/app/views/registration_lobbies/index.html.erb
@@ -76,11 +76,11 @@
 
   <div class="small-12 medium-4 column">
     <figure data-equalizer-watch>
-      <%= link_to root_path do %>
+      <%= link_to statistics_path do %>
         <% image_tag 'homepage/stats.jpg',  alt: t('registration_lobbies_index.stats.stats_title') %>
       <% end %>
       <div class="content">
-        <%= link_to root_path do %>
+        <%= link_to statistics_path do %>
           <p><strong><%= t'registration_lobbies_index.stats.stats_title' %></strong></p>
         <% end %>
         <p>
