Change common instructions for organization signup, modification and acccount cancelation

--- a/app/views/organizations/_common_instructions_text.es.html.erb
+++ b/app/views/organizations/_common_instructions_text.es.html.erb
@@ -4,7 +4,7 @@
 <h3>Instrucciones generales</h3>
 <br/>
 <p>
-  La declaración responsable debe ser presentada a través de la Sede electrónica del Ayuntamiento de Madrid utilizando el <%= link_to 'Registro Electrónico', register_url, name: nil %>. En este caso, deberá utilizar los <%= link_to 'certificados electrónicos', certificates_url, name: nil %> admitidos por el Ayuntamiento de Madrid
+  Para inscribirse en el registro, modificar la inscripción o darse de baja en él es necesario presentar una declaración responsable a través de la Sede electrónica del Ayuntamiento de Madrid, utilizando el <%= link_to 'Registro Electrónico', register_url %>. En este caso, deberán utilizarse los <%= link_to 'certificados electrónicos', certificates_url, name: nil %> admitidos por el Ayuntamiento de Madrid.
 </p>
 <br/>
  <%= link_to 'Ir a sede electronica', "https://sede.madrid.es/sites/v/index.jsp?vgnextoid=5763386a64370610VgnVCM2000001f4a900aRCRD&vgnextchannel=f47ea38813180210VgnVCM100000c90da8c0RCRD" ,class: 'button expanded button', name: nil %>
