--- a/app/views/holders/index.csv.erb
+++ b/app/views/holders/index.csv.erb
@@ -1,8 +1,8 @@
 <%=
-CSV.generate(:col_sep => ';') do |csv|
-  csv << [t('backend.holder'), t('backend.public_url')]
-  @holders.each do |h|
-    csv << [h.full_name_comma, agenda_url(h.id,h.full_name.parameterize) ]
+  CSV.generate(col_sep: ';', encoding: 'UTF-8') do |csv|
+    csv << [t('backend.holder'), t('backend.public_url')]
+    @holders.each do |h|
+      csv << [h.full_name_comma, agenda_url(h.id,h.full_name.parameterize)]
+    end
   end
-end.encode('iso-8859-1')
 %>
