--- a/app/views/users/index.csv.erb
+++ b/app/views/users/index.csv.erb
@@ -1,10 +1,20 @@
 <%=
-CSV.generate(:col_sep => ';') do |csv|
-  csv << [t('backend.role'), t('backend.users'), t('backend.user_url'), t('backend.holder'), t('backend.agenda_url')]
-  @users.each do |user|
-    user.manages.map{|h| h.holder}.each do |h|
-      csv << [t("backend.#{user.role}").capitalize, user.full_name, user_url(user), h.full_name, agenda_url(h.id,h.full_name.parameterize) ]
+  CSV.generate(col_sep: ';', encoding: 'UTF-8') do |csv|
+
+    csv << [t('backend.role'),
+            t('backend.users'),
+            t('backend.user_url'),
+            t('backend.holder'),
+            t('backend.agenda_url')]
+
+    @users.each do |user|
+      user.manages.map{|h| h.holder}.each do |h|
+        csv << [t("backend.#{user.role}").capitalize,
+                user.full_name,
+                user_url(user),
+                h.full_name,
+                agenda_url(h.id,h.full_name.parameterize) ]
+      end
     end
   end
-end.encode('iso-8859-1')
 %>
