--- a/app/views/visitors/index.csv.erb
+++ b/app/views/visitors/index.csv.erb
@@ -1,8 +1,18 @@
 <%=
-CSV.generate(:col_sep => ';') do |csv|
-  csv << [t('backend.title'), t('backend.description'), t('backend.location'), t('backend.holder'), t('backend.date')]
-  @events.results.each do |e|
-    csv << [e.title.strip, strip_tags(e.description), e.location, e.position.holder.full_name, I18n.l(e.scheduled, format: :short) ]
+  CSV.generate(col_sep: ';', encoding: 'UTF-8') do |csv|
+
+    csv << [t('backend.title'),
+            t('backend.description'),
+            t('backend.location'),
+            t('backend.holder'),
+            t('backend.date')]
+
+    @events.results.each do |e|
+      csv << [e.title.strip,
+              strip_tags(e.description),
+              e.location,
+              e.position.holder.full_name,
+              I18n.l(e.scheduled, format: :short)]
+    end
   end
-end.encode('iso-8859-1')
 %>
