this test fails in master ¿?

--- a/app/views/layouts/_admin_sidebar.html.erb
+++ b/app/views/layouts/_admin_sidebar.html.erb
@@ -17,7 +17,7 @@
     </li>
     <% end %>
     <% if current_user.user? %>
-      <li class="<%= active_menu('events', nil, 'events') %>">
+      <li class="<%= active_menu('events', nil, :events) %>">
         <a href="<%= events_path(event_fixed_filters[:events]) %>">
           <i class="fi-book size-18"> <%= t("organizations.show.events_title") %></i>
         </a>
@@ -55,7 +55,7 @@
       </li>
     <% end %>
     <% if current_user.user? %>
-      <li class="<%= active_menu('events', nil, 'tray') %>">
+      <li class="<%= active_menu('events', nil, :tray) %>">
         <a href="<%= events_path(event_fixed_filters[:tray]) %>">
           <i class="fi-calendar size-18">
             <%= t("backend.event_tray") %>
