Remove turbolinks from stylesheet_link and added space after alt image attribute.

--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -4,11 +4,11 @@
   <title>Titúlo</title>
   <meta name="descripcion" content="Descripción">
   <meta charset="UTF-8">
-  <%= stylesheet_link_tag 'email', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag 'email', media: 'all' %>
 </head>
 <body class="body">
   <div class="top-bar">
-    <%= image_tag 'logo-email.jpg', alt:'¡Madrid'%>
+    <%= image_tag 'logo-email.jpg', alt:'¡Madrid' %>
   </div>
   <div class="content">
     <%= yield %>
