--- a/app/views/visitors/index.csv.erb
+++ b/app/views/visitors/index.csv.erb
@@ -14,5 +14,5 @@
               e.position.holder.full_name,
               I18n.l(e.scheduled, format: :short)]
     end
-  end
+  end.html_safe
 %>
