--- a/app/views/holders/index.csv.erb
+++ b/app/views/holders/index.csv.erb
@@ -4,5 +4,5 @@
     @holders.each do |h|
       csv << [h.full_name_comma, agenda_url(h.id,h.full_name.parameterize)]
     end
-  end
+  end.html_safe
 %>
