A little bit of refactoring. Also fixing organizations exportation encoding and output translation issues.

--- a/app/views/organizations/index.csv.erb
+++ b/app/views/organizations/index.csv.erb
@@ -1,5 +1,5 @@
 <%=
-  exporter = PublicOrganizationExporter.new
+  exporter = OrganizationExporter.new
 
   CSV.generate(col_sep: ';', encoding: 'UTF-8') do |csv|
     csv << exporter.windows_headers
