Refactor HTML statistics page. Remove statistics.js. Add some style to accordion. Remove click on accordion.

--- a/app/assets/stylesheets/static-pages.scss
+++ b/app/assets/stylesheets/static-pages.scss
@@ -3,3 +3,15 @@
     list-style: unset;
   }
 }
+
+.statistics{
+  .accordion{
+    li{
+      margin-top: 0;
+      .accordion-title{
+        background: #003df6;
+        color: #fff;
+      }
+    }
+  }
+}
