--- a/app/views/static_pages/websitemap.html.erb
+++ b/app/views/static_pages/websitemap.html.erb
@@ -10,7 +10,7 @@
     <li><a href="/organizations/edit"><%= t "websitemap.update_lobbies" %></a></li>
     <li><a href="/faq#faq_24"><%= t "websitemap.rules_lobbies" %></a></li>
     <li><a href="/faq"><%= t "websitemap.faq" %></a></li>
-    <li><a href="/"><%= t "websitemap.stadistics" %></a></li>
+    <li><a href="/statistics"><%= t "websitemap.stadistics" %></a></li>
     <li><a href="/infringement_emails/new"><%= t "websitemap.mailbox" %></a></li>
     <li><a href="/registration_lobbies/index"><%= t "websitemap.regulations_lobbies" %></a></li>
     </ul>
