--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -1,95 +1,103 @@
 <div class="small-12 column">
   <h2><%=t("statistics.statistics")%></h2>
   <p><%=t("statistics.description")%></p>
-
-  <button class="accordion" style="width: 100%;"><%=t("statistics.category_lobbies")%></button>
-  <div class="panel" style="display: none;">
-  <table class="display" cellpadding="0" width="100%" >
-    <thead>
-      <tr>
-        <th width="40%"><%= t('statistics.category')%></th>
-        <th width="15%"><%= t('statistics.amount')%></th>
-      </tr>
-    </thead>
-    <tbody>
-      <%@lobby_category.each do|name , number| %>
-      <tr>
-        <td>
-          <%=name%>
-        </td>
-        <td>
-          <%=number%>
-        </td>
-      </tr>
-      <% end %>
-    </tbody>
-  </table>
-
-</div>
-
-<button class="accordion" style="width: 100%;"><%=t("statistics.interest_lobbies")%></button>
-<div class="panel" style="display: none;">
-  <table class="display" cellpadding="0" width="100%">
-    <thead>
-      <tr>
-        <th width="40%"><%= t('statistics.interest')%></th>
-        <th width="15%"><%= t('statistics.amount')%></th>
-      </tr>
-    </thead>
-    <tbody>
-      <%@lobbies_interests.each do|name , number| %>
-      <tr>
-       <td>
-         <%=name%>
-       </td>
-       <td>
-        <%=number%>
-      </td>
-    </tr>
-    <% end %>
-  </tbody>
-</table>
-</div>
-
-<button class="accordion" style="width: 50%;"><%=t("statistics.description_lobbies")%></button>
-<div align="center" class="panel" style="width: 50%;display: none;">
-  <table>
-    <tbody>
-      <tr>
-        <th rowspan="2" scope="rowgroup" style='text-align:center;vertical-align:middle'><%=t("statistics.inscribed_lobbies")%><br> <p><%=@lobbies_active.count%></th>
-          <th scope="row"><%=t("statistics.employed")%></th>
-          <td><%=self_employed(false).count %></td>
-        </tr>
-        <tr>
-          <th scope="row"><%=t("statistics.self_employed")%></th>
-          <td><%=self_employed(true).count %></td>
-        </tr>
-        <tr>
-          <th scope="row"><%=t("statistics.agents")%></th>
-          <td><%=@agent_active%></td>
-        </tr>
-      </tbody>
-    </table>
+  <div class="row content">
+    <div class="large-12 columns home_middle">
+      <ul class="accordion" data-accordion data-allow-all-closed="true">
+        <li class="accordion-navigation">
+          <a href="#category_lobbies"><%=t("statistics.category_lobbies")%></a>
+          <div id="category_lobbies" class="content active">
+            <table class="display" cellpadding="0" width="100%" >
+              <thead>
+                <tr>
+                  <th width="40%"><%= t('statistics.category')%></th>
+                  <th width="15%"><%= t('statistics.amount')%></th>
+                </tr>
+              </thead>
+              <tbody>
+                <%@lobby_category.each do|name , number| %>
+                  <tr>
+                    <td>
+                      <%=name%>
+                    </td>
+                    <td>
+                      <%=number%>
+                    </td>
+                  </tr>
+                <% end %>
+              </tbody>
+            </table>
+          </div>
+        </li>
+        <li class="accordion-navigation">
+          <a href="#interest_lobbies"><%=t("statistics.interest_lobbies")%></a>
+          <div id="interest_lobbies" class="content">
+            <table class="display" cellpadding="0" width="100%">
+              <thead>
+                <tr>
+                  <th width="40%"><%= t('statistics.interest')%></th>
+                  <th width="15%"><%= t('statistics.amount')%></th>
+                </tr>
+              </thead>
+              <tbody>
+                <%@lobbies_interests.each do|name , number| %>
+                  <tr>
+                    <td>
+                       <%=name%>
+                    </td>
+                    <td>
+                      <%=number%>
+                    </td>
+                  </tr>
+                <% end %>
+              </tbody>
+            </table>
+          </div>
+        </li>
+        <li class="accordion-navigation">
+          <a href="#description_lobbies"><%=t("statistics.description_lobbies")%></a>
+          <div id="description_lobbies" class="content">
+            <table>
+              <tbody>
+                <tr>
+                  <th rowspan="2" scope="rowgroup" style='text-align:center;vertical-align:middle'><%=t("statistics.inscribed_lobbies")%><br> <p><%=@lobbies_active.count%></th>
+                  <th scope="row"><%=t("statistics.employed")%></th>
+                  <td><%=self_employed(false).count %></td>
+                </tr>
+                <tr>
+                  <th scope="row"><%=t("statistics.self_employed")%></th>
+                  <td><%=self_employed(true).count %></td>
+                </tr>
+                <tr>
+                  <th scope="row"><%=t("statistics.agents")%></th>
+                  <td><%=@agent_active%></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </li>
+        <li class="accordion-navigation">
+          <a href="#public_agendas"><%=t("statistics.public_agendas")%></a>
+          <div id="public_agendas" class="content">
+            <table>
+              <tbody>
+                <tr>
+                  <th rowspan="1" scope="rowgroup" ><%=t("statistics.lobby_events")%></th>
+                  <td><%=@event_lobby_activity%></td>
+                </tr>
+                <tr>
+                  <th rowspan="1" scope="rowgroup"><%=t("statistics.total_events")%></th>
+                  <td><%=@event_all%></td>
+                </tr>
+                <tr>
+                  <th rowspan="1" scope="rowgroup"><%=t("statistics.amount_public_agendas")%></th>
+                  <td><%=@holder_all%></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </li>
+      </ul>
+    </div>
   </div>
-
-  <button class="accordion" style="width: 50%;"><%=t("statistics.public_agendas")%></button>
-  <div align="center" class="panel" style="width: 50%;display: none;">
-   <table>
-    <tbody>
-      <tr>
-        <th rowspan="1" scope="rowgroup" ><%=t("statistics.lobby_events")%></th>
-        <td><%=@event_lobby_activity%></td>
-      </tr>
-      <tr>
-        <th rowspan="1" scope="rowgroup"><%=t("statistics.total_events")%></th>
-        <td><%=@event_all%></td>
-      </tr>
-      <tr>
-        <th rowspan="1" scope="rowgroup"><%=t("publc_agendas")%></th>
-        <td><%=@holder_all%></td>
-      </tr>
-    </tbody>
-  </table>
 </div>
-
-<%= javascript_include_tag 'statistics'%>
