Fix style table into accordion.

--- a/app/assets/stylesheets/static-pages.scss
+++ b/app/assets/stylesheets/static-pages.scss
@@ -12,6 +12,9 @@
         background: #003df6;
         color: #fff;
       }
+      .border-right{
+        border-right: solid 1px #DDDDDD;
+      }
     }
   }
 }
