--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -12,11 +12,15 @@
         <%=t 'statistics.category_lobbies' %>
       </div>
       <div class="content active">
-        <table class="display" cellpadding="0" width="100%" >
+        <table cellpadding="0" width="100%" >
           <thead>
             <tr>
-              <th width="40%"><%= t('statistics.category')%></th>
-              <th width="15%"><%= t('statistics.amount')%></th>
+              <th width="40%">
+                <%= t'statistics.category' %>
+              </th>
+              <th width="15%">
+                <%= t'statistics.amount' %>
+              </th>
             </tr>
           </thead>
           <tbody>
@@ -40,7 +44,7 @@
         <%= t'statistics.interest_lobbies' %>
       </div>
       <div class="content active">
-        <table class="display" cellpadding="0" width="100%">
+        <table cellpadding="0" width="100%">
           <thead>
             <tr>
               <th width="40%">
@@ -75,11 +79,42 @@
         <table>
           <tbody>
             <tr>
-              <th rowspan="2" scope="rowgroup" style='text-align:center;vertical-align:middle'>
+              <th colspan="3">
                 <%= t'statistics.inscribed_lobbies' %>
-                <br>
+                <br />
+                <%= @lobbies_active.count %>
+
+                <tr>
+                  <td class="border-right">
+                    <strong>
+                      <%= t'statistics.employed' %>
+                    </strong>
+                    <br />
+                    <%= self_employed(false).count %>
+                  </td>
+                  <td class="border-right">
+                    <strong>
+                      <%= t'statistics.self_employed' %>
+                    </strong>
+                    <br />
+                    <%= self_employed(true).count %>
+                  </td>
+                  <td>
+                    <strong>
+                      <%= t'statistics.agents' %>
+                    </strong>
+                    <br />
+                    <%= @agent_active %>
+                  </td>
+                </tr>
+              </th>
+            </tr>
+
+              <!-- <th rowspan="2">
+                <%= t'statistics.inscribed_lobbies' %><br>
                 <%= @lobbies_active.count %>
               </th>
+
               <th scope="row">
                 <%= t'statistics.employed' %>
               </th>
@@ -88,7 +123,7 @@
               </td>
             </tr>
             <tr>
-              <th scope="row">
+              <th>
                 <%= t'statistics.self_employed' %>
               </th>
               <td>
@@ -96,16 +131,53 @@
               </td>
             </tr>
             <tr>
-              <th scope="row">
+              <th>
                 <%= t'statistics.agents' %>
               </th>
               <td>
-                <%= @agent_active%>
+                <%= @agent_active %>
+              </td>
+            </tr> -->
+          </tbody>
+        </table>
+      </div>
+    </li>
+
+    <li class="accordion-navigation active">
+      <div class="accordion-title">
+        <%= t 'statistics.public_agendas' %>
+      </div>
+      <div class="content active">
+        <table>
+          <tbody>
+            <tr>
+              <th rowspan="1" scope="rowgroup" >
+                <%= t'statistics.lobby_events' %>
+              </th>
+              <td>
+                <%= @event_lobby_activity %>
+              </td>
+            </tr>
+            <tr>
+              <th rowspan="1" scope="rowgroup">
+                <%= t'statistics.total_events' %>
+              </th>
+              <td>
+                <%= @event_all %>
+              </td>
+            </tr>
+            <tr>
+              <th rowspan="1" scope="rowgroup">
+                <%= t'statistics.amount_public_agendas' %>
+              </th>
+              <td>
+                <%= @holder_all %>
               </td>
             </tr>
           </tbody>
         </table>
       </div>
     </li>
+
   </ul>
 </div>
