--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -76,14 +76,13 @@
         <%= t'statistics.description_lobbies' %>
       </div>
       <div class="content active">
-        <table>
+        <table width="100%">
           <tbody>
             <tr>
               <th colspan="3">
                 <%= t'statistics.inscribed_lobbies' %>
                 <br />
-                <%= @lobbies_active.count %>
-
+                <span><%= @lobbies_active.count %></span>
                 <tr>
                   <td class="border-right">
                     <strong>
@@ -109,35 +108,6 @@
                 </tr>
               </th>
             </tr>
-
-              <!-- <th rowspan="2">
-                <%= t'statistics.inscribed_lobbies' %><br>
-                <%= @lobbies_active.count %>
-              </th>
-
-              <th scope="row">
-                <%= t'statistics.employed' %>
-              </th>
-              <td>
-                <%= self_employed(false).count %>
-              </td>
-            </tr>
-            <tr>
-              <th>
-                <%= t'statistics.self_employed' %>
-              </th>
-              <td>
-                <%= self_employed(true).count %>
-              </td>
-            </tr>
-            <tr>
-              <th>
-                <%= t'statistics.agents' %>
-              </th>
-              <td>
-                <%= @agent_active %>
-              </td>
-            </tr> -->
           </tbody>
         </table>
       </div>
@@ -148,7 +118,7 @@
         <%= t 'statistics.public_agendas' %>
       </div>
       <div class="content active">
-        <table>
+        <table width="100%">
           <tbody>
             <tr>
               <th rowspan="1" scope="rowgroup" >
