Reactivate organizations export on public page. Allow to export extended information of organizaiton to administrators. Change task to export organizations to not to use extended mode.

--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -38,7 +38,7 @@
                         class: "select-sm" %>
       </div>
       <div class="small-12 medium-3 columns export no-padding">
-        <%#= export_link(current_url(format: :csv)) %>
+        <%= export_link(current_url(format: :csv)) %>
       </div>
     </div>
     <div class="small-12 columns mb20">
