Added text center and width to table td.

--- a/app/assets/stylesheets/static-pages.scss
+++ b/app/assets/stylesheets/static-pages.scss
@@ -15,6 +15,9 @@
       .border-right{
         border-right: solid 1px #DDDDDD;
       }
+      table{
+        width: 100%;
+      }
     }
   }
 }
