Fix edit inscription_date. Add new format on public organization show.

--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -21,7 +21,7 @@
             <p>
               <strong><%= t('organizations.show.inscription_date') %>
               </strong>
-              <%= I18n.l @organization.inscription_date %>
+              <%= I18n.l(@organization.inscription_date, format: :short) %>
             </p>
           <% end %>
 
