--- a/app/views/events/_search_form.html.erb
+++ b/app/views/events/_search_form.html.erb
@@ -3,6 +3,8 @@
     <h1><%= event_title(current_user) %></h1>
   </div>
   <div class="small-6 medium-4 column">
+    <%= link_to t('backend.export'), current_url(format: :csv),
+               class: "button tiny radius success left" %>
     <%= link_to event_new(current_user),
                 new_event_path,
                 :class => "button radius warning right" if can? :create, Event %>
