Add missing fields on organizations.

--- a/app/views/admin/organizations/_lobby_data.html.erb
+++ b/app/views/admin/organizations/_lobby_data.html.erb
@@ -1,6 +1,20 @@
 <fieldset>
   <legend><%= t('backend.lobbies_data.title_fieldset') %></legend>
+
   <div class="row">
+    <div class="small-12 columns">
+      <%= f.label :own_lobby_activity, t('backend.lobbies_data.own_lobby_activity') %>
+      <%= f.radio_button :own_lobby_activity, true %>
+      <%= t('backend.lobbies_data.own_lobby_activity_yes') %>
+      &nbsp;
+      <%= f.radio_button :own_lobby_activity, false %>
+      <%= t('backend.lobbies_data.own_lobby_activity_no') %>
+      <%= form_field_errors(f, :own_lobby_activity) %>
+    </div>
+  </div>
+
+  <div class="row hide" id="lobbies-data-content">
+
     <div class="small-12 medium-6 columns">
       <%= f.label :fiscal_year, t('backend.lobbies_data.fiscal_year') %>
       <%= f.number_field :fiscal_year, min: 0 %>
@@ -18,7 +32,7 @@
       <%= f.label :subvention, t('backend.lobbies_data.subvention') %>
       <%= f.radio_button :subvention, true %>
       <%= t('backend.lobbies_data.subvention_yes') %>
-      <br>
+      &nbsp;
       <%= f.radio_button :subvention, false %>
       <%= t('backend.lobbies_data.subvention_no') %>
       <%= form_field_errors(f, :subvention) %>
@@ -27,7 +41,7 @@
       <%= f.label :contract, t('backend.lobbies_data.contract') %>
       <%= f.radio_button :contract, true %>
       <%= t('backend.lobbies_data.contract_yes') %>
-      <br>
+      &nbsp;
       <%= f.radio_button :contract, false %>
       <%= t('backend.lobbies_data.contract_no') %>
       <%= form_field_errors(f, :contract) %>
