--- a/app/views/admin/organizations/_represented_entities.html.erb
+++ b/app/views/admin/organizations/_represented_entities.html.erb
@@ -1,6 +1,17 @@
 <fieldset>
   <legend><%= t('backend.represented_entities.title_fieldset') %></legend>
   <div class="row">
+    <div class="small-12 columns">
+      <%= f.label :foreign_lobby_activity, t('backend.lobbies_data.foreign_lobby_activity') %>
+      <%= f.radio_button :foreign_lobby_activity, true %>
+      <%= t('backend.lobbies_data.foreign_lobby_activity_yes') %>
+      &nbsp;
+      <%= f.radio_button :foreign_lobby_activity, false %>
+      <%= t('backend.lobbies_data.foreign_lobby_activity_no') %>
+      <%= form_field_errors(f, :foreign_lobby_activity) %>
+    </div>
+  </div>
+  <div class="row hide" id="represented-entities-content">
     <div id="nested-represented-entities">
       <%= f.fields_for :represented_entities do |represented_entities_builder| %>
         <%= render 'represented_entities_fields', f: represented_entities_builder %>
