--- a/app/views/admin/organizations/_represented_entities_fields.html.erb
+++ b/app/views/admin/organizations/_represented_entities_fields.html.erb
@@ -56,7 +56,7 @@
       <%= f.label :subvention, t('backend.represented_entities.subvention') %>
       <%= f.radio_button :subvention, true %>
       <%= t('backend.lobbies_data.subvention_yes') %>
-      <br>
+      &nbsp;
       <%= f.radio_button :subvention, false %>
       <%= t('backend.lobbies_data.subvention_no') %>
       <%= form_field_errors(f, :subvention) %>
@@ -66,7 +66,7 @@
       <%= f.label :contract, t('backend.represented_entities.contract') %>
       <%= f.radio_button :contract, true %>
       <%= t('backend.lobbies_data.contract_yes') %>
-      <br>
+      &nbsp;
       <%= f.radio_button :contract, false %>
       <%= t('backend.lobbies_data.contract_no') %>
       <%= form_field_errors(f, :contract) %>
